--- a/app/src/main/res/layout/view_item_phrase.xml
+++ b/app/src/main/res/layout/view_item_phrase.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
+        android:visibility="invisible"
         tools:text="Translation" />
 
     <View
